<resources>
    <string name="app_name">Be.Ergo</string>
    <string name="lbl_neck">Pescoço</string>
    <string name="lbl_shoulder">Ombro</string>
    <string name="lbl_up_back">Torax</string>
    <string name="lbl_elbow">Cotovelo</string>
    <string name="lbl_wrist_hand">Punho/Mão</string>
    <string name="lbl_low_back">Lombar</string>
    <string name="lbl_hip">Anca</string>
    <string name="lbl_knee">Joelho</string>
    <string name="lbl_ank_feet">Tornozelo/Pé</string>
    <string name="lbl_smoker">Fumador</string>
    <string name="lbl_active">Atividade Física (Frequência semanal)</string>
    <string name="lbl_weight">Weight (kg)</string>
    <string name="lbl_height">Height (m)</string>
    <string name="lbl_name">Nome</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_birth_date">Data de Nascimento</string>
    <string name="lbl_genre">Género</string>
    <string name="lbl_masc">Masculino</string>
    <string name="lbl_fem">Feminino</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_create">Criar</string>
    <string name="btn_update">Atualizar</string>
    <string name="it_edit">Editar</string>
    <string name="it_delete">Eliminar</string>
    <string name="txt_welcome">Olá!! </string>
    <string name="txt_age">A tua idade: </string>
    <string name="txt_IMC">O teu IMC: </string>
    <string name="btn_profile"> Ver Perfil</string>
    <string name="btn_plan">Exercícios</string>
    <string name="btn_nordic">Questionários</string>
    <string name="it_Add">Adicionar</string>
    <string name="it_orderByDate">Ordenar Por Data</string>
    <string name="lbl_DateToday">Data de Hoje</string>
    <string name="txt_Risk">"Fatores de Risco: "</string>
    <string name="submit">Submeter</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="btn_newProfile">Registar</string>
    <string name="lbl_PIN">PIN</string>
    <string name="it_editPIN">Alterar PIN</string>
    <string name="txt_Ergo">Risco Ergonómico Atual:</string>
    <string name="privacypolice">Declaro que li e concordo com a Política de Privacidade e Proteção de Dados Pessoais</string>
    <string name="rgpdNotifications">Pretendo receber notificações e atualizações sobre produtos e serviços Be.Ergo</string>
    <string name="dataCollection">Autorizo a Be.Ergo a gravar de forma anónima os meus dados pessoais.</string>
    <string name="privacyPoliceTitle">Política de Privacidade e Proteção de Dados Pessoais</string>
    <string name="txt_rate_title">Gosta da App Be.Ergo?</string>
    <string name="partilhar">Partilhar</string>
    <string name="about">Acerca de</string>
    <string name="txt_contact">Tem dúvidas/sugestões? Contacte-nos</string>
    <string name="enviar">Enviar</string>
</resources>