<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserCRUD">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="enableUserEditMode"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        app:tint="@color/white"
        android:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="manageRecord"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_baseline_save_24"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:text="@string/lbl_name"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/txtName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:enabled="false"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:text="@string/lbl_email"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/txtEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="5dp"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/lblPIN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/lblPIN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:text="@string/lbl_PIN"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/txtPIN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

            <EditText
                android:id="@+id/txtPIN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="5dp"
                android:enabled="false"
                android:hint="******"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:maxLines="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblPIN" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:text="@string/lbl_birth_date"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/txtBirthDt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPIN" />

            <EditText
                android:id="@+id/txtBirthDt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="5dp"
                android:enabled="false"
                android:gravity="top"
                android:inputType="date"
                android:lines="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:text="@string/lbl_genre"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/rbMasc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBirthDt" />


            <RadioButton
                android:id="@+id/rbMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingStart="10dip"
                android:paddingEnd="10dip"
                android:text="@string/lbl_masc"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/rbFem"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


            <RadioButton
                android:id="@+id/rbFem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingStart="10dip"
                android:paddingEnd="10dip"
                android:text="@string/lbl_fem"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/rbMasc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rbMasc" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:text="@string/lbl_height"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/txtHeight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rbMasc" />

            <EditText
                android:id="@+id/txtHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="5dp"
                android:enabled="false"
                android:gravity="top"
                android:inputType="numberDecimal"
                android:lines="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:text="@string/lbl_weight"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/txtWeight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHeight" />

            <EditText
                android:id="@+id/txtWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:enabled="false"
                android:gravity="top"
                android:inputType="numberDecimal"
                android:lines="1"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />


            <Switch
                android:id="@+id/swSmoker"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/lbl_smoker"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:paddingStart="10dip"
                android:paddingEnd="10dip"
                android:textAlignment="gravity"
                android:textOff="@string/no"
                android:textOn="@string/yes"
                android:textSize="20sp"
                android:thumbTint="@color/teal_700"
                app:layout_constraintBottom_toTopOf="@+id/lblActive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWeight"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/lblActive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:text="@string/lbl_active"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/barActive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swSmoker" />

            <SeekBar
                android:id="@+id/barActive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="10dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:paddingRight="10dip"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toTopOf="@+id/valActive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblActive" />

            <TextView
                android:id="@+id/valActive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barActive"
                android:visibility="visible"/>


            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:height="40dp"
                android:onClick="backToMain"
                android:text="@string/btn_back"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCreate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valActive"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="9dp"
                android:height="40dp"
                android:enabled="false"
                android:onClick="manageRecord"
                android:text="@string/btn_create"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnBack"
                app:layout_constraintTop_toBottomOf="@+id/valActive"
                android:visibility="invisible"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</android.widget.RelativeLayout>